[gd_scene load_steps=8 format=3 uid="uid://dyqc1r27twitx"]

[ext_resource type="Script" path="res://Scenes/Player.gd" id="1_5ryka"]
[ext_resource type="Texture2D" uid="uid://xvu0ghdubrij" path="res://Assets/Image/new/character.png" id="2_1fyxp"]
[ext_resource type="PackedScene" uid="uid://b66pl2urpcs63" path="res://Scenes/Weapons/Gun.tscn" id="3_bcufi"]
[ext_resource type="PackedScene" uid="uid://bgdyvny4ny1oc" path="res://Scenes/Weapons/Shotgun.tscn" id="4_u1eob"]
[ext_resource type="PackedScene" uid="uid://b72elkpu22b2g" path="res://Scenes/EntityComponents/EntityHealthComponent.tscn" id="5_1oiq3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_14k60"]
size = Vector2(46, 44)

[sub_resource type="CircleShape2D" id="CircleShape2D_75rhq"]
radius = 56.2939

[node name="Player" type="CharacterBody2D"]
collision_layer = 17
script = ExtResource("1_5ryka")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_14k60")

[node name="CandleArea" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="CandleArea"]
shape = SubResource("CircleShape2D_75rhq")

[node name="ReloadBar" type="ProgressBar" parent="."]
visible = false
offset_left = -29.0
offset_top = 33.0
offset_right = 33.0
offset_bottom = 39.0
value = 100.0
show_percentage = false

[node name="JetpackBar" type="ProgressBar" parent="."]
visible = false
self_modulate = Color(1, 0.568627, 0, 1)
offset_left = -29.0
offset_top = 42.0
offset_right = 33.0
offset_bottom = 48.0
value = 100.0
show_percentage = false

[node name="DashBar" type="ProgressBar" parent="."]
visible = false
self_modulate = Color(0.0823529, 0.678431, 0, 1)
offset_left = -29.0
offset_top = 52.0
offset_right = 33.0
offset_bottom = 58.0
value = 100.0
show_percentage = false

[node name="EntityHealthComponent" parent="." instance=ExtResource("5_1oiq3")]

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
scale = Vector2(1.22222, 1.22222)
texture = ExtResource("2_1fyxp")

[node name="Gun" parent="." instance=ExtResource("3_bcufi")]
unique_name_in_owner = true

[node name="Shotgun" parent="." instance=ExtResource("4_u1eob")]
unique_name_in_owner = true
visible = false
